--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@types/jest": "24.0.12",
+    "@types/lodash": "^4.14.125",
     "@types/node": "12.0.0",
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
@@ -19,6 +20,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.2",
     "resumablejs": "^1.1.0",
     "typescript": "3.4.5",
     "typescript-fsa": "^3.0.0-beta-2",
