--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,12 @@
   "devDependencies": {
     "@types/busboy": "^0.2.3",
     "@types/express": "^4.16.1",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^12.0.0",
     "busboy": "^0.3.1",
     "express": "^4.16.4",
     "logform": "^2.1.2",
+    "mocha": "^6.1.4",
     "ts-node-dev": "^1.0.0-pre.38",
     "typescript": "^3.4.5",
     "winston": "^3.2.1"
@@ -31,6 +33,7 @@
   "dependencies": {
     "@types/memorystream": "^0.3.0",
     "http-status-codes": "^1.3.2",
+    "io-ts": "^1.8.5",
     "memorystream": "^0.3.1"
   }
 }
