--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "start": "ts-node-dev ./src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --opts ./test/mocha.opts ${MOCHA_ARGS}"
   },
   "repository": {
     "type": "git",
@@ -22,10 +22,12 @@
     "@types/express": "^4.16.1",
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.0.0",
+    "@types/supertest": "^2.0.7",
     "busboy": "^0.3.1",
     "express": "^4.16.4",
     "logform": "^2.1.2",
     "mocha": "^6.1.4",
+    "supertest": "^4.0.2",
     "ts-node-dev": "^1.0.0-pre.38",
     "typescript": "^3.4.5",
     "winston": "^3.2.1"
