--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,15 @@
   "homepage": "https://www.auriosoftware.com",
   "devDependencies": {
     "@types/busboy": "^0.2.3",
+    "@types/chai": "^4.1.7",
     "@types/express": "^4.16.1",
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.0.0",
     "@types/supertest": "^2.0.7",
     "busboy": "^0.3.1",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-register": "0.0.1",
     "express": "^4.16.4",
     "logform": "^2.1.2",
     "mocha": "^6.1.4",
@@ -36,6 +40,7 @@
     "winston": "^3.2.1"
   },
   "dependencies": {
+    "@types/chai-as-promised": "^7.1.0",
     "@types/memorystream": "^0.3.0",
     "http-status-codes": "^1.3.2",
     "io-ts": "^1.8.5",
