--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
+    "reselect": "^4.0.0",
     "resumablejs": "^1.1.0",
     "typescript-fsa": "^2.5.0",
     "typescript-fsa-reducers": "^1.2.1"
