--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "src/app.ts",
   "scripts": {
     "start": "ts-node-dev ./src/app.ts",
+    "start:prod": "node ./dist/src/app.js",
+    "build": "rm -rf dist/*; tsc -p tsconfig.build.json",
     "test": "mocha --opts ./test/mocha.opts ${MOCHA_ARGS}",
+    "test:debug": "DEBUG=upload_server npm run test",
     "lint": "tslint --project tsconfig.json --fix"
   },
   "repository": {
@@ -25,25 +28,30 @@
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.0.0",
     "@types/supertest": "^2.0.7",
-    "busboy": "^0.3.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-register": "0.0.1",
-    "express": "^4.16.4",
-    "logform": "^2.1.2",
     "mocha": "^6.1.4",
     "supertest": "^4.0.2",
     "ts-node-dev": "^1.0.0-pre.38",
     "tslint": "^5.16.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.4.5",
-    "winston": "^3.2.1"
+    "typescript": "^3.4.5"
   },
   "dependencies": {
+    "express": "^4.16.4",
+    "busboy": "^0.3.1",
+    "logform": "^2.1.2",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/helmet": "0.0.43",
     "@types/memorystream": "^0.3.0",
+    "helmet": "^3.18.0",
     "http-status-codes": "^1.3.2",
     "io-ts": "^1.8.5",
-    "memorystream": "^0.3.1"
+    "memorystream": "^0.3.1",
+    "winston": "^3.2.1"
+  },
+  "engines": {
+    "node": "11.0.1"
   }
 }
