--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,6 +10,7 @@ RUN npm run build
 FROM node:lts-alpine
 WORKDIR /usr/src/app
 COPY package*.json ./
+COPY config/production.js config/
 RUN npm install --production
 
 COPY --from=builder /usr/src/app/dist/src ./dist
@@ -17,6 +18,7 @@ COPY --from=builder /usr/src/app/dist/src ./dist
 RUN mkdir -p data
 RUN mkdir -p logs
 
+ENV NODE_ENV=production
 EXPOSE 3001
 
 ENTRYPOINT ["node", "dist/app.js"]
