--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://www.auriosoftware.com",
   "devDependencies": {
+    "@types/async-busboy": "^0.7.0",
     "@types/busboy": "^0.2.3",
     "@types/chai": "^4.1.7",
     "@types/express": "^4.16.1",
@@ -39,15 +40,16 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
-    "express": "^4.16.4",
-    "busboy": "^0.3.1",
-    "logform": "^2.1.2",
     "@types/chai-as-promised": "^7.1.0",
     "@types/helmet": "0.0.43",
     "@types/memorystream": "^0.3.0",
+    "async-busboy": "^0.7.0",
+    "busboy": "^0.3.1",
+    "express": "^4.16.4",
     "helmet": "^3.18.0",
     "http-status-codes": "^1.3.2",
     "io-ts": "^1.8.5",
+    "logform": "^2.1.2",
     "memorystream": "^0.3.1",
     "winston": "^3.2.1"
   },
