--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY . ./
+ENV REACT_APP_ENV=production
 RUN npm run build
 
 # Stage 2 - production image
