--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,10 @@
   "main": "src/app.ts",
   "scripts": {
     "start": "ts-node-dev ./src/app.ts",
-    "start:prod": "node ./dist/src/app.js",
     "build": "rm -rf dist/*; tsc -p tsconfig.build.json",
     "test": "mocha --opts ./test/mocha.opts ${MOCHA_ARGS}",
     "test:debug": "DEBUG=upload_server npm run test",
+    "test:coverage": "nyc npm run test",
     "lint": "tslint --project tsconfig.json --fix"
   },
   "repository": {
@@ -22,6 +22,7 @@
   },
   "homepage": "https://www.auriosoftware.com",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/async-busboy": "^0.7.0",
     "@types/busboy": "^0.2.3",
     "@types/chai": "^4.1.7",
@@ -33,6 +34,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-register": "0.0.1",
     "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
     "supertest": "^4.0.2",
     "ts-node-dev": "^1.0.0-pre.38",
     "tslint": "^5.16.0",
