--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     depends_on:
       - server
     ports:
-      - 80:${UPLOADER_UI_PORT}
+      - ${UPLOADER_UI_PORT}:80
     environment:
       API_SERVER_HOST: http://server:${UPLOADER_SERVER_PORT}
     volumes:
@@ -13,7 +13,7 @@ services:
   server:
     build: server
     ports:
-      - 3001:${UPLOADER_SERVER_PORT}
+      - ${UPLOADER_SERVER_PORT}:3001
     volumes:
       - ${UPLOADER_FILES_DIR}/uploaded-files:/usr/src/app/data/uploads
       - ${UPLOADER_FILES_DIR}/tmp:/usr/src/app/data/tmp
