--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,6 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
     "resumablejs": "^1.1.0",
     "typescript-fsa": "^2.5.0",
@@ -52,11 +51,13 @@
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/enzyme": "^3.9.1",
     "@types/react-redux": "^7.0.8",
+    "@types/redux-saga": "^0.10.5",
     "@types/resumablejs": "^1.0.6",
     "enzyme-adapter-react-16": "^1.13.0",
     "nyc": "^14.1.1",
     "redux-devtools": "^3.5.0",
     "redux-mock-store": "^1.5.3",
+    "redux-saga": "^1.0.2",
     "tslint": "^5.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.3.3"
