--- a/server/package.json
+++ b/server/package.json
@@ -43,10 +43,12 @@
   },
   "dependencies": {
     "@types/chai-as-promised": "^7.1.0",
+    "@types/crc": "^3.4.0",
     "@types/helmet": "0.0.43",
     "@types/memorystream": "^0.3.0",
     "async-busboy": "^0.7.0",
     "busboy": "^0.3.1",
+    "crc": "^3.8.0",
     "express": "^4.16.4",
     "helmet": "^3.18.0",
     "http-status-codes": "^1.3.2",
