--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "start": "ts-node-dev ./src/app.ts",
+    "start:prod": "node ./dist/src/app.js",
     "build": "rm -rf dist/*; tsc -p tsconfig.build.json",
     "test": "mocha --opts ./test/mocha.opts ${MOCHA_ARGS}",
     "test:debug": "DEBUG=upload_server npm run test",
